Changes in style.css on 05.03.2023 at 14:17

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -162,7 +162,7 @@ form{
   
 .article1{
 
-    /*text-shadow: none;*/
+    text-shadow: none;
     text-transform: lowercase;
     font-size: 14px;
     font-weight: 400;
