--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,10 +6,11 @@
 
 body, html 
 {
+  font-family: 'Didact Gothic', sans-serif;
+  font-weight: 400;
   margin: 0; 
   padding: 0; 
   outline: 0;
-  font-size: 14px;
   overflow-x: hidden;
   overflow-y: auto;
   scrollbar-width: thin;
@@ -97,9 +98,9 @@ a:hover{
 .container{   
     /*padding-top: 50px;*/
     position: relative;
-    left: 25%;
+    left: 22.4%;
     /*top: 50%;*/
-    width:40%;
+    width:50%;
     
     /*-webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
@@ -127,11 +128,10 @@ form{
 .article{
     font-size: 15px;
     font-weight: 400;
-    letter-spacing: 1.5px;
     box-sizing: content-box;
     width: 100%;    
     text-align: justify;
-    text-transform: uppercase;
+    text-transform: capitalize;
     padding: 50px; 
     border: 10px solid  #000000;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39); 
@@ -141,7 +141,7 @@ form{
     
 }
 .artbody{
-        font-weight: 400;
+    font-weight: 400;
     font-size: 24px;
     text-transform: lowercase;    
     }
