--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
 
 body, html 
 {
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: "Mona-Sans Regular";
   font-weight: 400;
   margin: 0; 
   padding: 0; 
