--- a/templates/home.html
+++ b/templates/home.html
@@ -105,7 +105,7 @@
             <br>
             <br>
             <div class="article1">
-                &nbsp;
+                &nbsp;Dated:
                 {{ article.created_at }}
                 <br>
                 {% if article.updated_at != article.created_at %}
