Changes in the title. Now in Mono Sans Medium.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -176,7 +176,9 @@ form{
 }
 
 .myDiv {
+
     letter-spacing: 3px;
+    font-family: "Mona-Sans Medium";
     font-size: 60px;
     color: white;
     text-transform: lowercase;
