--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'jquery.fancybox.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="preload" href="https://github.com/rrajesh0205/font/blob/f8c21f43b05d92252ba92c4e2a7c869c9db35878/Mona-Sans-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="https://github.com/rrajesh0205/font/blob/f8c21f43b05d92252ba92c4e2a7c869c9db35878/Mona-Sans-Medium.ttf" as="font" type="font/ttf" crossorigin>
     <title>My Blog</title>
     <!-- Include the Quill library -->
 
