.about me. is added in about.html. 06th March 2023 at 7:16

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
 <div class="myDiv">
     <a href='/'>My Blog</a>
     <div class="myDiv1">
-        <center>.</center>
+        <center>.about me.</center>
     </div>
 </div>
 
