Home is now removed from the home page. March 12, 2023 at 18:29

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
 <div class="myDiv">
     <a href='/'>My Blog</a>
     <div class="myDiv1">
-        <center>.about me.</center>
+        <center>.about the author.</center>
     </div>
 </div>
 
@@ -69,13 +69,10 @@
 </nav>
 <br>
 
-<button class="my_bttn">
-    <i class="fa fa-arrow-up"></i>
-</button>
-
-<div class="container">
-    
-</div>
+        <div class="father">
+            <a href='/'>404. User not found.<span>.</span></a> 
+        </div>
+        
 
 {% endblock %}
 
