--- a/templates/home.html
+++ b/templates/home.html
@@ -75,10 +75,10 @@
         <div class="article">
             <div class="modmenu">
                 <a href="{% url 'article_edit' article.pk %}" class="tooltipedit"> <span>Edit</span>
-                <img src="{% static 'edit.png' %}" width = "16" height = "16"/></a>
+                <img src="{% static '35-edit-flat.gif' %}" width = "50" height = "50"/></a>
                     &nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="{% url 'delete' article.pk %}" class="tooltipdelete" ><span>Delete</span>
-                <img src="{% static 'trash.png' %}" width = "16" height = "16"/></a>
+                <img src="{% static '185-trash-bin-flat.gif' %}" width = "50" height = "50"/></a>
                 &nbsp;&nbsp;
             </div>           
             <div class="artbody">
