Animation removed in Edit and Delete. 19.03.2023.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -213,7 +213,7 @@ form{
   font-size: 15px;
   text-transform: lowercase;
   color: #ffc515;
-  float: left;
+  float: right;
 }
 .topnav {
     font-weight: 500;
