--- a/templates/create.html
+++ b/templates/create.html
@@ -3,6 +3,11 @@
 
 <header>
 <nav>
+    <ul class="nav navbar-nav">
+        <li><a href='create' class="scroll">Home</a></li>
+        <li><a href="#contact" class="scroll">Contact</a></li>
+       
+      </ul>
     <!--
 <div class="topnav">
     <a class="active" style="pointer-events: none; display:" href='/'>Home</a>
