Navigation succeeded in create.

--- a/templates/create.html
+++ b/templates/create.html
@@ -4,7 +4,7 @@
 <header>
 <nav>
     <ul class="nav navbar-nav">
-        <li><a href='create' class="scroll">Home</a></li>
+        <li><a href='/' class="scroll">Home</a></li>
         <li><a href="#contact" class="scroll">Contact</a></li>
        
       </ul>
