--- a/templates/create.html
+++ b/templates/create.html
@@ -6,17 +6,12 @@
   
     
 <div class="topnav">
-    <a class="active" style="pointer-events: none; display:" href='/'>Home</a>
+    <a class="active" style="pointer-events: none; display:" href='/'>My Blog</a>
     <a href='create/'>Create</a>
 </div>
 
 </nav>
-<div class="myDiv">
-    <a href='/'>My Blog </a>
-    <div class="myDiv1">
-        <center>Create Menu</center>
-    </div>
-</div>
+
 
 </header>
 <br>
