--- a/templates/create.html
+++ b/templates/create.html
@@ -2,12 +2,10 @@
 {% block content %}
 
 <header>
-<nav>
-  
-    
+<nav>    
 <div class="topnav">
-    <a class="active" style="pointer-events: none; display:" href='/'>My Blog</a>
-    <a href='create/'>Create</a>
+    <a class="active" style="pointer-events: none; display:" href='create/'>New Post</a>
+    <a href='/'>Home</a>
 </div>
 
 </nav>
