Experimenting new navigation in home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,14 +2,13 @@
 {% block content %}
 {% load static %}
 <header>
-<nav>
-    <!--
+<nav>    
 <div class="topnav">
-    <a class="active" style="pointer-events: none; display:" href='/'>Home</a>
-    <a href='create/'>Create</a> 
+    <a class="active" style="pointer-events: none; display:" href='create/'>New Post</a>
+    <a href='/'>Home</a>
 </div>
--->
 </nav>
+</header>
 <div class="myDiv">
     <a href='/'>My Blog</a>
     <div class="myDiv1">
