--- a/templates/home.html
+++ b/templates/home.html
@@ -4,20 +4,11 @@
 <header>
 <nav>    
 <div class="topnav">
-    <a class="active" style="pointer-events: none; display:" href='create/'>New Post</a>
-    <a href='/'>Home</a>
+    <a class="active" style="pointer-events: none; display:" href='/'>home</a>
+    <a href='create'>New Post</a>
 </div>
 </nav>
 </header>
-<div class="myDiv">
-    <a href='/'>My Blog</a>
-    <div class="myDiv1">
-        <center>.</center>
-    </div>
-</div>
-
-</header>    
-<br>
 <!-- 
 <div class="myDiv">
     <a href="/">My Blog</a>
