Transferring to Mona Sans.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -216,10 +216,10 @@ form{
   float: right;
 }
 .topnav {
-    font-weight: 500;
-    letter-spacing: 3px;
-    font-size: 20px;  
-    text-transform: uppercase;
+    font-family: "Mona-Sans Regular";
+    font-weight: 400;
+    font-size: 32px;  
+    text-transform: none;
     background-color: #ffc515;
     overflow: hidden;
     
