--- a/static/css/style.css
+++ b/static/css/style.css
@@ -228,14 +228,12 @@ form{
   
   /* Style the links inside the navigation bar */
   .topnav a {
-    font-weight: 500;
-    letter-spacing: 3px;
-    font-size: 20px;
-    float: right;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    font-family: "Mona-Sans Regular";
+    font-weight: 400;
+    font-size: 32px;  
+    text-transform: none;
+    background-color: #ffc515;
+    overflow: hidden;
     
        
   }
