--- a/static/css/style.css
+++ b/static/css/style.css
@@ -242,9 +242,9 @@ form{
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    font-weight: 500;
-    letter-spacing: 3px;
-    font-size: 20px;    
+    font-family: "Mona-Sans Regular";
+    font-weight: 400;
+    font-size: 32px;  
     background-color: black;
     color: white;
   }
