--- a/static/css/style.css
+++ b/static/css/style.css
@@ -251,9 +251,9 @@ form{
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    font-weight: 500;
-    letter-spacing: 3px;
-    font-size: 20px;  
+    font-family: "Mona-Sans Regular";
+    font-weight: 400;
+    font-size: 32px; 
     background-color: black;
     color: white;
 
