Hello Rajesh added in Navigation.

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,8 @@
 <header>
 <nav>    
 <div class="topnav">
-    <a class="active" style="pointer-events: none; display:" href='/'>home</a>
+    <a class="active" style="pointer-events: none; display:" href='/'>Hello Rajesh,</a>
+    <a class="active" style="pointer-events: none; display:" href='/'>Home</a>
     <a href='create'>New Post</a>
 </div>
 </nav>
