Hello Rajesh alignment issues.

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,8 @@
 <header>
 <nav>    
 <div class="topnav">
+    <h1><a class="navbar-brand" href="#">Hello Rajesh</a></h1>
     <a class="active" style="pointer-events: none; display:" href='/'>Hello Rajesh,</a>
-    <a class="active" style="pointer-events: none; display:" href='/'>Home</a>
     <a href='create'>New Post</a>
 </div>
 </nav>
