--- a/static/css/style.css
+++ b/static/css/style.css
@@ -601,8 +601,20 @@ b span
 
 
 a.navbar-brand {
-  font-size: 50px;
-}
+  font-family: "Mona-Sans Regular";
+  font-weight: bold;
+  font-size: 28px;  
+  text-transform: none;
+  background-color: #ffc515;
+  overflow: hidden;
+  }
 .navbar-brand{
   margin-left: 0 ! important;
+  font-family: "Mona-Sans Regular";
+    font-weight: bold;
+    font-size: 28px;  
+    text-transform: none;
+    background-color: #ffc515;
+    overflow: hidden;
+    
 }
