Sorted. Hello Rajesh is in Navigation bar.

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,10 @@
 {% load static %}
 <header>
 <nav>   
-<h1><a class="navbar-brand" href="#">Hello Rajesh</a></h1>
 <div class="topnav">
+    <div class="navbar-brand">
+        Hello Rajesh
+    </div>
     <a href='create'>New Post</a>
 </div>
 </nav>
