--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,9 @@
 <header>
 <nav>   
 <div class="topnav">
-    <div class="navbar-brand">
-        Hello Rajesh
+    <div class="navbar-brand">Hello Rajesh    
+        <a href='create'>New Post</a>
     </div>
-    <a href='create'>New Post</a>
 </div>
 </nav>
 </header>
