--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,8 @@
 <div class="topnav">
     <a href='create'>New Post</a>
 </div>
+<div class="topnav1">
+    <a href='/'>Hello Rajesh</a>
 </div>
 </nav>
 </header>
