Hello Rajesh is now applied to all linked pages.

--- a/templates/create.html
+++ b/templates/create.html
@@ -2,12 +2,14 @@
 {% block content %}
 
 <header>
-<nav>    
-<div class="topnav">
-    <a class="active" style="pointer-events: none; display:" href='create/'>New Post</a>
-    <a href='/'>Home</a>
-</div>
-</nav>
+    <nav>   
+    <div class="topnav1">
+        <a href='/'>Hello Rajesh</a>
+    </div>
+    <div class="topnav">
+        <a href='create'>New Post</a>
+    </div>
+    </nav>
 </header>
 <br>
 <div class="createcontainer">
