--- a/templates/detail.html
+++ b/templates/detail.html
@@ -89,11 +89,13 @@
             
             {% if article.img.url != Null %}            
             <center>
-                <img src = {{article.img.url}} style="width: 50%;
-                border: 15px solid white; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);
-                -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);
-                -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);  " />
-                </img>
+                
+                    <a href={{article.img.url}} data-fancybox data-caption="..">
+	                <img class='pop' src={{article.img.url}} alt="" />
+                    </a>
+                    
+
+                
             </center>
             {% endif %}
             <br>
