--- a/templates/detail.html
+++ b/templates/detail.html
@@ -7,8 +7,8 @@
     <div class="topnav1">
         <a href='/'>Hello Rajesh</a>
     </div>
-    <div class="topnav1">
-        <a href='#'>Detailed View.</a>    
+    <div class="topnavnew">
+        Detailed View.
     </div>
     </nav>
 </header>
