--- a/templates/home.html
+++ b/templates/home.html
@@ -3,12 +3,11 @@
 {% load static %}
 <header>
 <nav>   
-<div class="topnav1">
-    <a href='/'>Hello Rajesh</a>
-</div>
-<div class="topnav">
-    <a href='create'>New Post</a>
-</div>
+    <div class="navbar" id="myNavbar">
+        <a href="/" class="active">Home</a>
+        <a href="create/">New POst</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
 </nav>
 </header>
 
