--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 <nav>   
     <div class="navbar" id="myNavbar">
         <a href="/" class="active">Home</a>
-        <a href="create/">New POst</a>
+        <a href="create/">New Post</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
 </nav>
