More inn Navigation.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -675,18 +675,18 @@ b span
   background-color: #ffc515;
   color: black;
   position: fixed;
-  bottom: 0;
+  top: 0;
   width: 100%;
 }
 
 .navbar a {
-  float: left;
+  float: right;
   display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 18px;
 }
 
 .navbar a:hover {
