The content now goes under.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -675,6 +675,7 @@ b span
   background-color: #ffc515;
   color: black;
   position: fixed;
+  z-index:1; /*Add this*/
   top: 0;
   width: 100%;
 }
