New Navigation bar applied to detail.html

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,12 +4,10 @@
 
 <header>
     <nav>   
-    <div class="topnav1">
-        <a href='/'>Hello Rajesh</a>
-    </div>
-    <div class="topnavnew">
-        Detailed View.
-    </div>
+        <div class="navbar" id="myNavbar">
+            <a href="/" class="active">Home</a>
+            <a href="create/">New Post</a>
+        </div>
     </nav>
 </header>
 
