--- a/templates/detail.html
+++ b/templates/detail.html
@@ -5,14 +5,15 @@
 <header>
     <nav>   
         <div class="navbar" id="myNavbar">
-            <a href="/" class="active">Home</a>
-            <a href="create/">New Post</a>
+            <a href="#" class="active">Detailed View</a>
+            <a href="/">Home</a>
         </div>
     </nav>
 </header>
-
 <br>
-
+<br>
+<br>
+<br>
 <div class="container">
         <div class="article">
             
