New Navigation now applied to create.html

--- a/templates/create.html
+++ b/templates/create.html
@@ -3,12 +3,10 @@
 
 <header>
     <nav>   
-    <div class="topnav1">
-        <a href='/'>Hello Rajesh</a>
-    </div>
-    <div class="topnav">
-        <a href='/'>Home</a>
-    </div>
+        <div class="navbar" id="myNavbar">
+            <a href="#" class="active">New Post</a>
+            <a href="/">Home</a>
+        </div>
     </nav>
 </header>
 <div class="createcontainer">
