create post format is now as delete.html

--- a/templates/create.html
+++ b/templates/create.html
@@ -15,7 +15,7 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
             {{ form.as_p }}
-        <button type="submit">Create Post</button>
+        <input type="submit" value="Create Post"/>
     </form> 
 </div>
 
