Contact is now added.

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
     <div class="navbar" id="myNavbar">
         <a href="/" class="active">Home</a>
         <a href="create/">New Post</a>
+        <a href="about/">Contact</a>
     </div>
 </nav>
 </header>
