--- a/templates/about.html
+++ b/templates/about.html
@@ -2,71 +2,17 @@
 {% block content %}
 {% load static %}
 <header>
-<nav>
-    <!--
-<div class="topnav">
-    <a class="active" style="pointer-events: none; display:" href='/'>Home</a>
-    <a href='create/'>Create</a> 
-</div>
--->
-</nav>
-<div class="myDiv">
-    <a href='/'>My Blog</a>
-    <div class="myDiv1">
-        <center>.about the author.</center>
-    </div>
-</div>
-
-</header>    
+    <nav>   
+        <div class="navbar" id="myNavbar">
+            <a href="/">Home</a>
+            <a href="/create/">New Post</a>
+            <a href="about/" class="active">Contact</a>
+        </div>
+    </nav>
+</header>
 <br>
-<!-- 
-<div class="myDiv">
-    <a href="/">My Blog</a>
-</div>
--->
-
-<!--    Made by Erik Terwan    -->
-<!--   24th of November 2015   -->
-<!--        MIT License        -->
-
-<nav role="navigation">
-  <div id="menuToggle">
-    <!-
-    A fake / hidden checkbox is used as click reciever,
-    so you can use the :checked selector on it.
-    -->
-
-    <input type="checkbox" />
-    
-    <!-
-    Some spans to act as a hamburger.
-    
-    They are acting like a real hamburger,
-    not that McDonalds stuff.
-    -->
-
-    <span></span>
-    <span></span>
-    <span></span>
-    
-    <!-
-    Too bad the menu has to be inside of the button
-    but hey, it's pure CSS magic.
-    -->
-
-    <ul id="menu">
-      <a href='/'>
-          <li>Home</li>
-      </a>
-      <a href='create'>
-          <li>Create</li>
-      </a>
-      <a href='about'>
-          <li>Contact</li>
-      </a>
-    </ul>
-  </div>
-</nav>
+<br>
+<br>
 <br>
 
         <div class="father">
