Work in progress.

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
 <br>
 
         <div class="father">
-            <a href='/'>404. User not found.<span>.</span></a> 
+            <a href='/'>Work in progress...<span>.</span></a> 
         </div>
         
 
