Work in progress again.

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
 <br>
 
         <div class="father">
-            <a href='/'>Work in progress...<span>.</span></a> 
+            <p>Work in progress...<span>.</span></p> 
         </div>
         
 
