--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,11 +22,11 @@ body, html
 }
 .father  {
 	position: absolute;
+	font-size: 48px;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  width: 100%;
       
 }
 .child  {
