Addition in about.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,14 @@
 <br>
 
         <div class="father">
-            <p>Work in progress...<span>.</span></p> 
+            <p>Hey! Nice to see you.
+
+                I’m Rajesh Ramamoorthy.
+                
+                🌱  I’m currently learning Django
+                
+                💬 reach me ... rajesh.ramamoorthy@outlook.in
+            </p> 
         </div>
         
 
