More additions in about.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,18 +15,13 @@
 <br>
 <br>
 <br>
-
         <div class="father">
-            <p>Hey! Nice to see you.
-
-                I’m Rajesh Ramamoorthy.
-                
-                🌱  I’m currently learning Django
-                
-                💬 reach me ... rajesh.ramamoorthy@outlook.in
+            <p> Hey! Nice to see you.<br>
+                I’m Rajesh Ramamoorthy.<br>
+                🌱  I’m currently learning Django<br>
+                💬 reach me ... rajesh.ramamoorthy@outlook.in<br>
             </p> 
-        </div>
-        
+        </div>    
 
 {% endblock %}
 
