about.html modifications

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
 <br>
 <br>
 <br>
-<br>
+<br>modifications
         <div class="father">
             <p> Hey! Nice to see you.<br>
                 I’m Rajesh Ramamoorthy.<br>
