More changes to about.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,13 +14,14 @@
 <br>
 <br>
 <br>
-<br>modifications
+<br>
         <div class="father">
-            <p> Hey! Nice to see you.<br>
+            <div class="about">
+                Hey! Nice to see you.<br>
                 I’m Rajesh Ramamoorthy.<br>
                 🌱  I’m currently learning Django<br>
                 💬 reach me ... rajesh.ramamoorthy@outlook.in<br>
-            </p> 
+            </div>
         </div>    
 
 {% endblock %}
