--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
             <div class="about">
                 Hey! Nice to see you.<br>
                 I’m Rajesh Ramamoorthy.<br>
-                🌱  I’m currently learning Django<br>
+                I’m currently learning Django<br>
                 💬 reach me ... rajesh.ramamoorthy@outlook.in<br>
             </div>
         </div>    
