And a lot more...

--- a/templates/about.html
+++ b/templates/about.html
@@ -18,8 +18,8 @@
         <div class="father">
             <div class="about">
                 Hey! Nice to see you.<br>
-                I’m Rajesh Ramamoorthy.<br>
-                I’m currently learning Django<br>
+                I’m Rajesh Ramamoorthy<span>.</span><br>
+                I’m currently learning Django<span>.</span><br>
                 💬 reach me ... rajesh.ramamoorthy@outlook.in<br>
             </div>
         </div>    
