--- a/templates/about.html
+++ b/templates/about.html
@@ -21,6 +21,7 @@
                 I’m Rajesh Ramamoorthy<span>.</span><br>
                 I’m currently learning Django<span>.</span><br>
                 💬 reach me ... rajesh.ramamoorthy@outlook.in<br>
+                Thanks for stopping by<span>.</span>
             </div>
         </div>    
 
