icon of reach me removed.

--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
                 Hey! Nice to see you.<br>
                 I’m Rajesh Ramamoorthy<span>.</span><br>
                 I’m currently learning Django<span>.</span><br>
-                💬 reach me ... rajesh.ramamoorthy@outlook.in<br>
+                reach me ... rajesh.ramamoorthy@outlook.in<br>
                 Thanks for stopping by<span>.</span>
             </div>
         </div>    
