The fullstop and the colon are now coloured.

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,10 +17,10 @@
 <br>
         <div class="father">
             <div class="about">
-                Hey! Nice to see you.<br>
+                Hey<span>!</span> Nice to see you<span>.</span><br>
                 I’m Rajesh Ramamoorthy<span>.</span><br>
                 I’m currently learning Django<span>.</span><br>
-                reach me ... rajesh.ramamoorthy@outlook.in<br>
+                reach me <span>...</span> rajesh<span>.</span>ramamoorthy@outlook<span>.</span>in<br>
                 Thanks for stopping by<span>.</span>
             </div>
         </div>    
