--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
             <div class="about">
                 Hey<span>!</span> Nice to see you<span>.</span><br>
                 I’m Rajesh Ramamoorthy<span>.</span><br>
-                <a href="mailto:rajesh.ramamoorthy@outlook.in">Email me<span>.</span></a><br>
+                <a href="mailto:rajesh.ramamoorthy@outlook.in">Email me<span>.</span><span>.</span><span>.</span></a><br>
                 Thanks for stopping by<span>.</span>
             </div>
         </div>    
