a bit of change in contact and one more door.

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,8 @@
 <br>
         <div class="father">
             <div class="about">
-                Hey<span>!</span> Nice to see you<span>.</span><br>
+                Hey<span>!</span> <br>
+                Nice to see you<span>.</span><br>
                 I’m Rajesh Ramamoorthy<span>.</span><br>
                 <a href="mailto:rajesh.ramamoorthy@outlook.in">Email me<span>.</span><span>.</span><span>.</span></a><br>
                 Thanks for stopping by<span>.</span>
