A quick work around in hyperlink.

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 <header>
     <nav>   
         <div class="navbar" id="myNavbar">
-            <a href="about/" class="active">Contact</a>
+            <a href="#" class="active">Contact</a>
             <a href="/">Home</a>
             <a href="/create/">New Post</a>
             
