Copyright is added in Navbar at bottom.

--- a/templates/home.html
+++ b/templates/home.html
@@ -55,6 +55,11 @@
   {% endfor %}
   <br>
 </div>
+
+<div class="navbarnew" id="myNavbar">
+    <a href="#" class="active">© 2023 Rajesh Ramamoorthy. All rights reserved.</a>     
+</div>  
+
 {% endblock %}
 
 
