--- a/templates/home.html
+++ b/templates/home.html
@@ -55,11 +55,11 @@
   {% endfor %}
   <br>
 </div>
-
+<nav>
 <div class="navbarnew" id="myNavbar">
     <a href="#" class="active">© 2023 Rajesh Ramamoorthy. All rights reserved.</a>     
 </div>  
-
+</nav>
 {% endblock %}
 
 
