More footer changes.

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,4 +26,11 @@
 <script src="{% static 'jquery.fancybox.min.js' %}"></script>
 <script src="{% static 'css/script.js' %}"></script>
 </body>
+<footer>
+    <nav>
+        <div class="navbarnew" id="myNavbar">
+            <a href="#" class="active">© 2023 Rajesh Ramamoorthy. All rights reserved.</a>     
+        </div>  
+    </nav>
+</footer>
 </html>
