--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,9 @@
     
   {% endfor %}
   <br>
-  <p>© 2023 Rajesh Ramamoorthy. All rights reserved.</p>
+    <div class="footnotes">
+            <p>© 2023 Rajesh Ramamoorthy. All rights reserved.</p>
+    </div>
 </div>
 
 {% endblock %}
